--- a/src/main/resources/templates/templateListarUsuarios.html
+++ b/src/main/resources/templates/templateListarUsuarios.html
@@ -1,27 +1,66 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
-    <meta charset="UTF-8"> <!-- Codificación de caracteres -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Compatibilidad Internet Explorer -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Adaptabilidad de pantalla (Responsive) -->
     <title>Listar Usuarios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
-
 </head>
 <body>
 <header th:include="~{../static/html/header.html}"></header>
 <section class="container col-12">
+    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#AgregarUsuario">
+        Agregar Usuario
+    </button>
+    <div class="modal fade" id="AgregarUsuario" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel2">Agregar Usuario</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form th:action="@{/usuario/crearusuario}" method="post">
+                    <div class="modal-body">
+                        <div>
+                            <label for="nombreUsuario" class="form-label">
+                                Nombre de usuario:
+                            </label>
+                            <input type="text" class="form-control" id="nombreUsuario" name="nombreUsuario" required
+                                   placeholder="ingrese su nombre">
+                        </div>
+                        <div>
+                            <label for="contrasena" class="form-label">
+                                Contraseña:
+                            </label>
+                            <input type="password" class="form-control" id="contrasena" name="contrasena" required
+                                   placeholder="ingrese su contraseña">
+                        </div>
+                        <div>
+                            <label for="nombreUsuario" class="form-label">
+                                Rol:
+                            </label>
+                            <select class="form-control" name="rol" id="rol" required>
+                                <option value="Profesor">Profesor</option>
+                                <option value="Estudiante">Estudiante</option>
+                                <option value="Administrador">Administrador</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Crear Usuario</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     <table class="Table">
         <thead>
         <tr>
             <th>ID</th>
-            <th>Nombre de Usuario</th>
+            <th>Nombre de usuario</th>
             <th>Rol</th>
-
         </tr>
         </thead>
         <tbody>
@@ -30,20 +69,73 @@
             <td th:text="${usuario.nombreUsuario}"></td>
             <td th:text="${usuario.rol}"></td>
             <td>
-                <div class="row m-4">
+                <div class="row m-1 ">
                     <div class="col-6">
-                        <form th:action="@{/usuario/editar/{id}(id=${usuario.id})}"
-                              method="get">
-                            <button class="btn btn-warning" type="submit">Editar</button>
-                        </form>
+                        <!-- Modal Editar -->
+                        <div class="modal fade" id="editar" tabindex="-1" aria-labelledby="exampleModalLabel3"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel3">Editar Usuario</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <form th:action="@{/usuario/editar/{id}(id=${usuario.getId()})}" method="post">
+                                        <div class="modal-body">
+                                            <div>
+                                                <label for="nombreUsuario" class="form-label">
+                                                    Nombre de usuario:
+                                                </label>
+                                                <input type="text" class="form-control" id="actualizarNombre"
+                                                       name="nombreUsuario" required
+                                                       th:value="${usuario.nombreUsuario}">
+                                            </div>
+                                            <div>
+                                                <label for="contrasena" class="form-label">
+                                                    Contraseña:
+                                                </label>
+                                                <input type="password" class="form-control" id="actualizarContrasena"
+                                                       name="contrasena" required th:value="${usuario.contrasena}">
+                                            </div>
+                                            <div>
+                                                <label for="actualizarRol" class="form-label">
+                                                    Rol:
+                                                </label>
+                                                <select class="form-control" name="rol" id="actualizarRol" required>
+                                                    <option th:selected="${usuario.rol == 'Profesor'}" value="Profesor">
+                                                        Profesor
+                                                    </option>
+                                                    <option th:selected="${usuario.rol == 'Estudiante'}"
+                                                            value="Estudiante">Estudiante
+                                                    </option>
+                                                    <option th:selected="${usuario.rol == 'Administrador'}"
+                                                            value="Administrador">Administrador
+                                                    </option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="submit" class="btn btn-primary">Editar Usuario</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Boton modal editar -->
+                        <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#editar">
+                            Editar
+                        </button>
                     </div>
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <!-- Modal Eliminar -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                         aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h1 class="modal-title fs-5" id="exampleModalLabel">Eliminar Usuario</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
                                     Estas seguro?
@@ -58,11 +150,14 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <!-- Boton del modal -->
-                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        <!-- Boton modal eliminar -->
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
                             Eliminar
                         </button>
+
                     </div>
+
                 </div>
             </td>
         </tr>
@@ -70,13 +165,10 @@
 
     </table>
 </section>
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
-</script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
