--- a/src/main/resources/templates/templateFormularioCrearAlumno.html
+++ b/src/main/resources/templates/templateFormularioCrearAlumno.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Formulario crear Alumno</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
 </head>
 <body>
-<header th:include="~{../static/html/header.html}"></header>
-<h2>
-    Soy un index
-</h2>
+<header th:include="~{../static/html/header.html}">
+</header>
+<section>
 
+</section>
 </body>
 </html>
