--- a/src/main/resources/templates/templateFormularioCrearUsuario.html
+++ b/src/main/resources/templates/templateFormularioCrearUsuario.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 <head>
-    <meta charset="UTF-8"> <!-- Codificación de caracteres -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Compatibilidad Internet Explorer -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Adaptabilidad de pantalla (Responsive) -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulario crear usuarios</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
 </head>
 <body>
-<header th:include="~{../static/html/header.html}"></header>
+<header th:include="~{../static/html/header.html}">
+</header>
 <section class="container">
-    <h2 class="text-success"><strong>Crear Usuario</strong></h2> <!--no h1 porque por proyecto solo puede haber 1 (mejorar SEO)-->
-    <form th:action="@{/usuario/crearusuario}" method="post">
+    <h2 class="text-success"><strong> crear usuario</strong></h2>
+    <form th:action="@{/usuario/crearUsuario}" method="post">
         <div>
-            <label for="nombreUsuario" class="form-label"> Nombre de Usuario: </label>
-            <input type="text" class="form-control" id="nombreUsuario" name="nombreUsuario" required placeholder="Ingrese Nombre"> <!--"placeholder" muestra texto de fondo (sombra) como ejemplo-->
+            <label for="nombreUsuario" class="form-label">
+                Nombre de usuario:
+            </label>
+            <input type="text" class="form-control" id="nombreUsuario" name="nombreUsuario" required
+                   placeholder="ingrese su nombre">
         </div>
         <div>
-            <label for="contrasena" class="form-label"> Contraseña: </label>
-            <input type="password" class="form-control" id="contrasena" name="contrasena" required placeholder="Ingrese Contraseña"> <!--n)-->
+            <label for="contrasena" class="form-label">
+                Contraseña:
+            </label>
+            <input type="password" class="form-control" id="contrasena" name="contrasena" required
+                   placeholder="ingrese su contraseña">
         </div>
         <div>
-            <label for="rol" class="form-label"> Rol: </label>
+            <label for="nombreUsuario" class="form-label">
+                Rol:
+            </label>
             <select class="form-control" name="rol" id="rol" required>
                 <option value="Profesor">Profesor</option>
                 <option value="Estudiante">Estudiante</option>
                 <option value="Administrador">Administrador</option>
-            </select> <!--n)-->
+            </select>
         </div>
         <button type="submit" class="btn btn-primary">Crear Usuario</button>
     </form>
